--- a/layout#006/style.css
+++ b/layout#006/style.css
@@ -9,6 +9,8 @@ body {
     background-image: linear-gradient(to bottom, #d7e6ed, #d8b4c9, #d7e6ed);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
+
+    overflow: hidden;
 }
 
 .cards {
@@ -16,10 +18,6 @@ body {
     width: 70%;
     height: 85vh;
     margin: 4% 25vw;
-}
-
-img {
-    width: 50%;
 }
 
 /* card1 */
@@ -32,12 +30,14 @@ img {
     padding: 30px;
 }
 
-.card1 .menu {
+.card1 .menu,
+#items-wrapper .menu {
     display: flex;
     justify-content: space-between;
 }
 
-.card1 .menu i {
+.card1 .menu i,
+#items-wrapper .menu i {
     cursor: pointer;
 }
 
@@ -51,7 +51,7 @@ img {
     border-radius: 2px;
 }
 
-.card1 .music-info {
+.card1 #music-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,14 +59,20 @@ img {
     margin-top: 20px;
 }
 
-.card1 .music-info .artist h3 {
+.card1 #music-info .fav {
+    cursor: pointer;
+    color: black;
+    margin-top: -18px;
+}
+
+.card1 #music-info .artist h3 {
     font-size: 24px;
     line-height: 34px;
     font-weight: 600;
     color: #111111;
 }
 
-.card1 .music-info .artist p {
+.card1 #music-info .artist p {
     font-size: 15px;
     line-height: 25px;
     font-weight: 500;
@@ -109,20 +115,158 @@ img {
 }
 
 .card1 .music-control {
-    margin: 30px auto;
+    margin: 25px auto;
     display: flex;
     justify-content: space-evenly;
-    position: relative;
 }
 
 .card1 .music-control i {
     cursor: pointer;
+    position: relative;
 }
 
-.card2 {
+.card1 .music-control i:nth-child(3) {
+    color: white;
+    margin-top: 6px;
+}
+
+.card1 .music-control span {
+    background-color: #4E8AD1;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    z-index: 0;
+    top: 555px;
+    cursor: pointer;
+}
+
+.card1 hr {
+    width: 30%;
+    border: 0.01px solid rgb(228, 228, 228);
+    margin: 30px auto;
+}
+
+.card1 .fav-share {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card1 .fav-share i {
+    color: #d1d8e6;
+    cursor: pointer;
+}
+
+.card1 .fav-share i:hover {
+    color: #bdbdbd;
+    transition: color 200ms;
+}
+
+/* card2 */
+#items-wrapper h3 {
+    padding: 20px 0px;
+    font-size: 22px;
+    line-height: 30px;
+    font-weight: 600;
+    color: #111111;
+}
+
+#items-wrapper {
     background-color: #faf9fb;
     width: 35%;
 
     border-radius: 12px;
     padding: 30px;
+}
+
+#items-wrapper #items {
+    display: flex;
+    overflow-x: hidden;
+
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+}
+
+#items-wrapper .item {
+    flex: none;
+    width: 45%;
+    height: 120px;
+
+    scroll-snap-align: start;
+    pointer-events: none;
+}
+
+#items-wrapper .item img {
+    width: 120px;
+    height: 120px;
+    /* padding-right: 44px; */
+    border-radius: 4px;
+
+    object-fit: cover;
+}
+
+#items-wrapper h2 {
+    padding: 20px 0px;
+    font-size: 22px;
+    line-height: 30px;
+    font-weight: 600;
+    color: #111111;
+}
+
+#items-wrapper .playlist {
+    display: flex;
+    flex-direction: column;
+}
+
+#items-wrapper .playlist .musics-playlist {
+    display: flex;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+#items-wrapper .playlist .musics-playlist img {
+    width: 60px;
+    height: 56px;
+
+    border-radius: 4px;
+}
+
+#items-wrapper .playlist .musics-playlist .playlist-infos {
+    display: block;
+    margin: auto 20px;
+}
+
+#items-wrapper .playlist .musics-playlist .playlist-infos h3 {
+    margin: 0;
+    padding: 0;
+
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 600;
+    color: #111111;
+}
+
+#items-wrapper .playlist .musics-playlist .playlist-infos p {
+    font-size: 12px;
+    line-height: 22px;
+    font-weight: 400;
+    color: #7d7d7d;
+
+    margin-top: -3px;
+}
+
+#items-wrapper .playlist .musics-playlist p:nth-child(3) {
+    font-size: 12px;
+    line-height: 22px;
+    color: #7d7d7d;
+    
+    top: 25%;
+    left: 90%;
+    position: absolute;
+}
+
+#items-wrapper .playlist .musics-playlist p:nth-child(3) i {
+    color: #4E8AD1;
+    cursor: pointer;
 }
